# leetcode

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .project_alt.json  BUILD.bazel  CMakeCache.txt  CMakeLists.txt  MODULE.bazel  README.md  bazel-bin  bazel-leetcode  bazel-out  bazel-testlogs  build.sh  cmake_install.cmake  common_environment.bzl  compile_commands.json  settings.xml
ate_tools/bazel/toolchains/llvm-clang-21/: BUILD.bazel  builtin_include_directory_paths_el7  cc_toolchain_config.bzl  cc_wrapper_el9.sh  deps_scanner_wrapper_el7.sh  deps_scanner_wrapper_el9.sh
bzl_tools/bazel/toolchains/gcc-toolset-13/: BUILD.bazel  builtin_include_directory_paths_el9
bzl_tools/bazelcc/: BUILD.bazel
bzl_tools/bazelcc/proto/: analysis_v2.proto
bzl_tools/bazelcc/src/: main.cpp
bzl_tools/bazelcc/test/: CompileCommandsWriterTests.cpp
src/: CMakeLists.txt  cmake_install.cmake  main.cpp
src/algorithmLevelUp/DynamicProgramming/Basic/: HamiltonianFlights.cpp  MontmortNumber.md  Readme.md  a.py  b.py  fib.cpp  frog1.cpp  frog2.cpp  isSubsetSum.cpp  isSubsetSumDP.cpp  pascalTriange.cpp  pickPlates.cpp  subSetSum.cpp  vacation.cpp
src/algorithmLevelUp/DynamicProgramming/Course/: fib.cpp  subSetSum.cpp
src/algorithmLevelUp/DynamicProgramming/FSM/: AfuTheieve.cpp  buyAndSellStocks.cpp  buyAndSellStocks2.cpp  designPasswd.cpp
src/algorithmLevelUp/DynamicProgramming/codeforce/: A_Filling_Shapes.cpp  B_Yet_Another_Broken_Keyboard.cpp  C_Vitamins.cpp  D_Lecture_Sleep.cpp  E_Office_Keys.cpp  F_Almost_Identity_Permutations.cpp  G_Covered_Path.cpp  H_Three_displays.cpp  I_Mike_and_Fun.cpp  K_Mashmokh_and_ACM.cpp  readme.md  utils.cpp
src/algorithmLevelUp/DynamicProgramming/digitalTrigle/: CountPeanuts.cpp  getNumFromSqual.cpp  lowestPass.cpp
src/algorithmLevelUp/DynamicProgramming/intervalDP/: divisionConvesPolygen.cpp  energyRing.cpp  stoneMergeCycle.cpp  stoneMerging.cpp
src/algorithmLevelUp/DynamicProgramming/knapsack/: 01knapsack.cpp  completeknapsack.cpp  multipleKnapsack.cpp
src/algorithmLevelUp/DynamicProgramming/longestincresingsubsequnce/: LongestCommonIncresingSubsequence.cpp  StrangethiefKiddsglidingwing.cpp  chorusFormation.cpp  clampMontain.cpp  friendCity.cpp  interceptMissiles.cpp  longestincresingsubsequnce.cpp  longestincresingsubsequnceSum.cpp  missileDefenceSystem.cpp
src/algorithmLevelUp/DynamicProgramming/rangeDP/: combineStone.cpp
src/algorithmLevelUp/DynamicProgramming/stateCompress/: noInvade.cpp
src/algorithmLevelUp/search/: floodFill.cpp  frack.c  next_permutation.cpp  print_permutation.cpp  re_nfa_dfa.py  solveSodu.cpp
src/dataStructure/: CMakeLists.txt  HashTable.h  Newton.h  Package.h  SingleLinkedList.h  SingleStack.h  ThreadTest.h  Trie.h  UnionFind.h  cmake_install.cmake  dataStructure.cpp  doubleLinkedList.h  hashTableSim.h  intervalSum.cpp  kmp.h  lower_bound.cpp  messgeQueue.cpp  prefixSum.cpp  sideWindow.h  skiplist.c  skiplist.cpp  skiplist.h  stringHash.h
src/leetcode/: CMakeLists.txt  cmake_install.cmake
src/leetcode/advanced/arrayAndString/: excelSimulator.cpp  fourSumCount.cpp  maxSumOfThreeSubarrays.cpp  productExceptSelf.cpp  spiralOrder.cpp
src/leetcode/advanced/math/: qrsqrt.cpp
src/leetcode/easy/array/: containsDuplicate.cpp  intersect.cpp  isValidSoduku.cpp  longestAlternatingSubarray.cpp  maxProfit.cpp  maximizeSum.cpp  moveZeros.cpp  plusOne.cpp  removeDuplicates.cpp  rotate.cpp  rotateImage.cpp  rowAndMaximumOnes.cpp  singleNumber.cpp  twoSum.cpp
src/leetcode/easy/dsignProblem/: minStack.cpp  shuffleArray.cpp
src/leetcode/easy/dynamicProgramming/: climbStairs.cpp  maxProfit.cpp  maxSubArray.cpp  rob.cpp
src/leetcode/easy/linkedList/: deleteNode.cpp  mergeTwoLists.cpp
src/leetcode/easy/math/: amount.cpp  countPrimes.cpp  dataStatistics.cpp  fizzBuzz.cpp  isPowerOfThree.cpp  romanToInt.cpp  surfaceAreaofCylinder.cpp  swap.cpp  threeDigitInversion.cpp
src/leetcode/easy/other/: generate.cpp  hammingDistance.cpp  hammingWeight.cpp  isValid.cpp  missingNumber.cpp  reverseBits.cpp
src/leetcode/easy/sortAndSearch/: firstBadVersion.cpp  merge.cpp
src/leetcode/easy/string/: reverse.cpp  reverseString.cpp
src/leetcode/easy/tree/: isSymmetric.cpp  isValidBST.cpp  levelOrder.cpp  maxDepth.cpp  sortedArrayToBST.cpp
src/leetcode/medium/arrayAndString/: groupAnagrams.cpp  increasingTriplet.cpp  lengthOfLongestSubstring.cpp  longestPalindrome.cpp  numPairsDivisibleBy60.cpp  setZeroes.cpp  threeSum.cpp
src/leetcode/medium/dsignProblem/: RandomizedSet.cpp  serializeAndDeserialize.cpp
src/leetcode/medium/dynamicProgramming/: canJump.cpp  coinChange.cpp  uniquePaths.cpp
src/leetcode/medium/linkedList/: addTwoNumbers.cpp
src/leetcode/medium/math/: divide.cpp  eigenSolve.cpp  eigenSolve.py  isHappy.cpp  (+6 more)
src/leetcode/weekOne/: AddTwoNumbers.h  CMakeLists.txt  LongestSubstring.h  MaxCount.cpp  MedianOfArrays.h  TwoSum.cpp  TwoSum.h  cmake_install.cmake
src/leetcode/weekThree/: 1052.爱生气的书店老板.cpp  Sum.cpp  cmake_install.cmake
src/leetcode/weekTwo/: CMakeLists.txt  cmake_install.cmake
src/leetcode/weeklyContest/: 802.cpp  SimilarPairs.cpp  SimilarPairs.h  cmake_install.cmake  lastDie.cpp  say.cpp
src/search/: 2385.AmountOfTime.cpp  CMakeLists.txt  bfsSearch.h  binarySearch.h  cmake_install.cmake  dfsSearch.h  dijstra.h  hanoi.cpp  nQueen.h  search.cpp  weightCenterTree.h
src/shortPath/: dijstra.cpp  dijstraHeap.cpp  shortPath.md
src/sort/: CMakeLists.txt  CMakeLists_old.txt  ExternalSort.h  HeapSort.h  HighAdd.h  HighDiv.h  HighMultiply.h  HighSub.h  KthNumber.h  MergeSort.h  NumberRange.h  QuickSort.h  ReversePairNumber.h  SimulatorHeap.h  TirTimesSolu.h  TopK.h  VectorSort.h  cmake_install.cmake  pairSort.cpp  sort.cpp
src/stringAlgorithm/: CMakeLists.txt  MaxLongestCommonAffix.h  cmake_install.cmake  removeTrailngZeros.cpp  stringAlgorithm.cpp
workspace/src/complicated/: BUILD.bazel
workspace/src/data_structure/: BUILD.bazel
workspace/src/search/: BUILD.bazel
workspace/src/skills/: BUILD.bazel
workspace/tests/: BUILD.bazel
workspace/tests/conventions/: BUILD.bazel  lc_files_test.cpp
(+531 files in other folders)
