load("@buildifier_prebuilt//:rules.bzl", "buildifier")

# Toolchain target_settings: matched via --compiler flag in .bazelrc
config_setting(
    name = "is_gcc",
    values = {"compiler": "gcc"},
)

config_setting(
    name = "is_clang",
    values = {"compiler": "clang"},
)

platform(
    name = "linux_clang_x86",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

buildifier(
    name = "buildifier.check",
    diff_command = "diff",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "fix",
)
