module(
    name = "leetcode",
    repo_name = "leetcode",
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "catch2", version = "3.5.3")
bazel_dep(name = "protobuf", version = "31.1")

single_version_override(
    module_name = "protobuf",
    patch_strip = 1,
    patches = [
        "//:ate_tools/bazel/patches/protobuf/disable-warnings-as-errors.patch",
    ],
)

adv_rhel_ext = use_extension("//ate_tools/bazel/adv_rhel:defs.bzl", "adv_rhel_extension")
use_repo(adv_rhel_ext, "adv_rhel")
