test_suite(
    name = "all_tests",
    tests = [
        "//workspace/tests/data_structure/array_and_string:two_sum_test",
        "//workspace/tests/data_structure/linked_list:linked_list_test",
        "//workspace/tests/data_structure/stack_and_queue:stack_test",
        "//workspace/tests/data_structure/hash_map_set:hash_map_test",
        "//workspace/tests/data_structure/trie:trie_test",
        "//workspace/tests/data_structure/union_find:union_find_test",
        "//workspace/tests/data_structure/heap:heap_test",
        "//workspace/tests/data_structure/tree:tree_test",
        "//workspace/tests/data_structure/graph:graph_test",
        "//workspace/tests/skills/two_pointers:two_pointers_test",
        "//workspace/tests/skills/sliding_window:sliding_window_test",
        "//workspace/tests/skills/binary_search:binary_search_test",
        "//workspace/tests/skills/prefix_sum:prefix_sum_test",
        "//workspace/tests/skills/string_algorithm:string_algorithm_test",
        "//workspace/tests/skills/bit_manipulation:bit_manipulation_test",
        "//workspace/tests/search/bfs:bfs_test",
        "//workspace/tests/search/dfs:dfs_test",
        "//workspace/tests/search/backtracking:n_queens_test",
        "//workspace/tests/search/tree_traversal:tree_traversal_test",
        "//workspace/tests/search/shortest_path:shortest_path_test",
        "//workspace/tests/search/interval:interval_test",
        "//workspace/tests/complicated/dynamic_programming:dp_test",
        "//workspace/tests/complicated/greedy:greedy_test",
        "//workspace/tests/complicated/divide_and_conquer:divide_and_conquer_test",
        "//workspace/tests/complicated/monotonic_stack:monotonic_stack_test",
        "//workspace/tests/complicated/topological_sort:topological_sort_test",
        "//workspace/tests/complicated/sort:sort_test",
    ],
)
