cc_library(
    name = "complicated",
    deps = [
        "//workspace/src/complicated/dynamic_programming",
        "//workspace/src/complicated/greedy",
        "//workspace/src/complicated/divide_and_conquer",
        "//workspace/src/complicated/monotonic_stack",
        "//workspace/src/complicated/topological_sort",
        "//workspace/src/complicated/sort",
    ],
    visibility = ["//visibility:public"],
)
