cc_library(
    name = "search",
    deps = [
        "//workspace/src/search/bfs",
        "//workspace/src/search/dfs",
        "//workspace/src/search/backtracking",
        "//workspace/src/search/tree_traversal",
        "//workspace/src/search/shortest_path",
        "//workspace/src/search/interval",
    ],
    visibility = ["//visibility:public"],
)
