load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "skills",
    visibility = ["//visibility:public"],
    deps = [
        "//workspace/src/skills/binary_search",
        "//workspace/src/skills/bit_manipulation",
        "//workspace/src/skills/prefix_sum",
        "//workspace/src/skills/sliding_window",
        "//workspace/src/skills/string_algorithm",
        "//workspace/src/skills/two_pointers",
    ],
)
