# Copyright 2016 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This becomes the BUILD file for @local_config_cc// under non-BSD unixes.

load(":cc_toolchain_config.bzl", "cc_toolchain_config")
load("@rules_cc//cc/toolchains:cc_toolchain.bzl", "cc_toolchain")
load("@rules_cc//cc/toolchains:cc_toolchain_suite.bzl", "cc_toolchain_suite")

load("//:ate_tools/env_cfg/install_dirs.bzl", "rpmRoot")
load("//:common_environment.bzl", "gcc_toolset_14_path", "gcc_toolset_14_gcc_ver")
load("@adv_rhel//:defs.bzl", "rhel_version")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

cc_library(name = "empty_lib")

# Label flag for extra libraries to be linked into every binary.
# TODO(bazel-team): Support passing flag multiple times to build a list.
label_flag(
    name = "link_extra_libs",
    build_setting_default = ":empty_lib",
)

# The final extra library to be linked into every binary target. This collects
# the above flag, but may also include more libraries depending on config.
cc_library(
    name = "link_extra_lib",
    deps = [
        ":link_extra_libs",
    ],
)

cc_library(
    name = "malloc",
)

filegroup(
    name = "empty",
    srcs = [],
)

filegroup(
    name = "cc_wrapper",
    srcs = ["cc_wrapper_el" + rhel_version() + ".sh"],
)

filegroup(
    name = "validate_static_library",
    srcs = ["validate_static_library.sh"],
)

filegroup(
    name = "deps_scanner_wrapper",
    srcs = ["deps_scanner_wrapper_el" + rhel_version() + ".sh"],
)
filegroup(
    name = "compiler_deps",
    srcs = glob(["extra_tools/**"], allow_empty = True) + [":builtin_include_directory_paths_el" + rhel_version(),
    ":cc_wrapper",
    ":deps_scanner_wrapper",
    ":validate_static_library"],
)

cc_toolchain(
    name = "clang21_x86_64_toolchain",
    toolchain_identifier = "local",
    toolchain_config = ":clang21_toolchain_config",
    all_files = ":compiler_deps",
    ar_files = ":compiler_deps",
    as_files = ":compiler_deps",
    compiler_files = ":compiler_deps",
    dwp_files = ":empty",
    linker_files = ":compiler_deps",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_header_parsing = 1,
    supports_param_files = 1,
)

cc_toolchain_config(
    name = "clang21_toolchain_config",
    cpu = "k8",
    compiler = "clang",
    toolchain_identifier = "local",
    host_system_name = "local",
    target_system_name = "local",
    target_libc = "local",
    abi_version = "local",
    abi_libc_version = "local",
    cxx_builtin_include_directories = [rpmRoot + "/llvm-clang-21/lib64/clang/21/include",
    "/usr/local/include",
    "/usr/include",
    rpmRoot + "/llvm-clang-21/lib64/clang/21/share",
    gcc_toolset_14_path + "/root/usr/include/c++/" + gcc_toolset_14_gcc_ver + "",
    gcc_toolset_14_path + "/root/usr/include/c++/" + gcc_toolset_14_gcc_ver + "/x86_64-redhat-linux",
    gcc_toolset_14_path + "/root/usr/include/c++/" + gcc_toolset_14_gcc_ver + "/backward",
    rpmRoot + "/llvm-clang-21/include/x86_64-unknown-linux-gnu/c++/v1",
    rpmRoot + "/llvm-clang-21/include/c++/v1",
    ],
    tool_paths = {
        "ar": rpmRoot + "/llvm-clang-21/bin/llvm-ar",
        "ld": rpmRoot + "/llvm-clang-21/bin/ld.lld",
        "llvm-cov": rpmRoot + "/llvm-clang-21/bin/llvm-cov",
        "llvm-profdata": rpmRoot + "/llvm-clang-21/bin/llvm-profdata",
        "cpp": rpmRoot + "/llvm-clang-21/bin/clang-cpp",
        "gcc": rpmRoot + "/llvm-clang-21/bin/clang-21",
        "dwp": rpmRoot + "/llvm-clang-21/bin/llvm-dwp",
        "gcov": rpmRoot + "/llvm-clang-21/bin/llvm-cov",
        "nm": rpmRoot + "/llvm-clang-21/bin/llvm-nm",
        "objcopy": rpmRoot + "/llvm-clang-21/bin/llvm-objcopy",
        "objdump": rpmRoot + "/llvm-clang-21/bin/llvm-objdump",
        "strip": rpmRoot + "/llvm-clang-21/bin/llvm-strip",
        "c++filt": "/bin/c++filt",
        "cpp-module-deps-scanner": "deps_scanner_wrapper_el" + rhel_version() + ".sh",
        "parse_headers": "cc_wrapper_el" + rhel_version() + ".sh",
        "validate_static_library": "validate_static_library.sh"},
    compile_flags = [
    "-fdiagnostics-color",
    "-fstack-protector-strong",
    "-Wall",
    "-Wthread-safety",
    "-Wself-assign",
    "-Wunused-but-set-parameter",
    "-fcolor-diagnostics",
    "-fno-omit-frame-pointer"],
    opt_compile_flags = ["-g0",
    "-O2",
    "-D_FORTIFY_SOURCE=1",
    "-DNDEBUG",
    "-ffunction-sections",
    "-fdata-sections"],
    dbg_compile_flags = ["-g"],
    conly_flags = [],
    cxx_flags = ["-std=c++17"],
    link_flags = ["-fuse-ld=" + rpmRoot + "/llvm-clang-21/bin/ld.lld",
    "-B" + rpmRoot + "/llvm-clang-21/bin",
    "-Wl,-no-as-needed",
    "-Wl,-z,relro,-z,now"],
    link_libs = ["-Wl,--push-state,-as-needed",
    "-lstdc++",
    "-Wl,--pop-state",
    "-Wl,--push-state,-as-needed",
    "-lm",
    "-Wl,--pop-state"],
    opt_link_flags = ["-Wl,--gc-sections"],
    unfiltered_compile_flags = ["-no-canonical-prefixes",
    "-Wno-builtin-macro-redefined",
    "-D__DATE__=\"redacted\"",
    "-D__TIMESTAMP__=\"redacted\"",
    "-D__TIME__=\"redacted\""],
    coverage_compile_flags = ["--coverage"],
    coverage_link_flags = ["--coverage"],
    supports_start_end_lib = True,
    extra_flags_per_feature = {"use_module_maps": ["-Xclang", "-fno-cxx-modules"]},
)

toolchain(
    name = "clang21_toolchain",
    toolchain = "clang21_x86_64_toolchain",
    toolchain_type = "@rules_cc//cc:toolchain_type",
    # exec_compatible_with = ['//:clang'],
    target_compatible_with = ['@platforms//cpu:x86_64'],
    target_settings = ["//:is_clang"],
)
